style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

body{
    padding: 0;
    margin: 0;
    box-sizing: border-box;

    font-family: 'Montserrat', sans-serif;
    background: url('./img/background.jpg');
    background-position: top center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;

    background-color: #333;
}

footer{
    margin-right: 2em;
    position: absolute;
    bottom: 2em;
    width:95%;
    text-align: right;
    
    color: white;
    font-size: 12px;
}

form{
    
    display: grid;
    grid-template-columns: 3fr 1fr;

    gap: 1em;
    /* position: relative; */
}


.background{
    position: absolute;
    top: 0;
    left: 0;

    background: rgba(0,0,0,0.3);
    width: 100%;
    height:100%;
}

.container{
    
    width: 50%;
    margin:auto;
}

header{
    margin-top: 5%;
    width:100%;
    text-align: center;
}

header h1{
    font-size: 50px;
    font-weight: 700;
    color: white;
}


input{
    width:100%;
    padding: 1em 2em;
    outline: none;

    grid-column: 1/2;
    box-sizing: border-box;
    margin: 0;
    
}


button{
    background-color: rgba(0,0,0,0);
    border: 1px solid #50a914;
    color: white;
    
    border-radius: 5px;
    
    outline: none;
    transition: all;
    transition-duration: 0.3s;

    width: 100%;
    margin: 0;
}
button:hover{
    background-color: #50a914;
    border:none;
}

ul{
    margin: 0;
    padding: 0;

    position:absolute;
    /* z-index: 1; */
    display: block;
    top: 4em;
    width: 100%;
}

#result-search li{
    width:100%;
    /* margin-right: 2em; */
    padding: 1em 2em;
    /* border-bottom: 1px dashed #333; */
    background-color: rgb(255,255,255,0.95);
    margin: 0;
    box-sizing: border-box;
    list-style: none;
    font-size: 14px;
    margin-bottom: 1px;

    transition: all;
    transition-duration: 0.3s;
}

#result-search li:hover{
    background-color: #50a914;
    color: white;
}

#result-image{
   margin-top: 1.5em; 
   height: 300px;
}

img{
    max-width: 100%;
    height:auto;
    box-shadow: 0 0 10px rgba(0,0,0,0.3);
}

